correction contraste

--- a/Starting+website/Starting website/style.css
+++ b/Starting+website/Starting website/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #000000;
+    background-color: #aa7257;
 }
 
 .tc-white {
